# maimai-playcount

./: .pre-commit-config.yaml  README.md  maimai_play_count.json  playcount.csv  pyproject.toml  setup.cfg
.github/workflows/: cron.yml
maimai_playcount/: history.py  main.py  playcount.py  store_play_count.py  store_playcount.py  tweeter.py
