[tool.poetry]
name = "maimai-playcount"
version = "0.1.0"
description = "money wasted on maimai today"
authors = ["akira <asa.shakira340@gmail.com>"]

[tool.poetry.scripts]
playcount = "maimai_playcount.main:main"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
chromedriver-autoinstaller = "^0.3.1"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.264"
pre-commit = "^2.20.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
