[metadata]
name = maimai-playcount
version = attr: maimai_playcount.__version__
description = see how much money wasted on maimai
long_description = file: README.md
long_description_content_type = text/markdown
# license = MIT
url = https://github.com/asashakira/maimai-playcount
author = asashakira
author_email = asa.shakira340@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    selenium
    chromedriver-autoinstaller
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    playcount = maimai_playcount.main:main

[options.extras_require]
dev =
    pylint
all =
    %(dev)s
